2005-02-01  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* src/yelp-toc-pager.c:
	- Adding nice large yelpish icon from Human

	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* stylesheets/db2html.xsl.in:
	- A nice yellow color for admonitions

	* stylesheets/toc2html.xsl:
	- Fixed document sorting problem

2005-01-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Fix #164858 (Don Scorgie)

	* src/yelp-main.c:
	- Fix #152852 (Don Scorgie, Kjartan Marass)

2005-01-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Changed copyright statement and a comment

	* stylesheets/toc2html.xsl:
	- Some design prettification

2005-01-21  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-bookmarks.c:
	- More bookmark love from Don Scorgie

	* src/yelp-xslt-pager.c:
	- Fixed a typo in a string

2005-01-20  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-gecko-utils.cpp:
	- Explicitly tell Gecko not to use the system colors

2005-01-20  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Pass the max_depth parameter

2005-01-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	* src/yelp-xslt-pager.c:
	* stylesheets/db2html.xsl.in:
	- Fix up prev/next stuff

2005-01-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Fix display of plain ol' HTML files, from Don Scorgie

2005-01-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- More bookmark love from Don Scorgie

	* src/yelp-info-pager.c:
	* src/yelp-man-pager.c:
	- Fixed build failures from renamed #defines

2005-01-17  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-db-pager.c:
	* stylesheets/Makefile.am:
	* stylesheets/db-title.xsl.in:
	- Get titles from the db.titleabbrev XSLT template

	* data/toc.xml.in:
	- Changed 'Sound & Video' to be 'Multimedia', for upstream compliance

	* src/yelp-info-pager.c:
	* src/yelp-man-pager.c: