@@ -1,5 +1,10 @@
 2005-02-01  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-bookmarks.c:
+	- Desensitivify buttons when nothing is selected (Don Scorgie)
+
+2005-02-01  Shaun McCance  <shaunm@gnome.org>
+
 	* data/icons/Makefile.am:
 	* src/yelp-toc-pager.c:
 	- Adding nice large yelpish icon from Human
